[package]
name = "cats"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.40.0", features = ["test-util"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
rstest = "0.23.0"
sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.3", features = ["postgres"] }
